--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "ag-grid-react": "^24.0.0",
         "apexcharts": "^3.21.0",
         "bootstrap": "^4.5.2",
+        "moment": "^2.29.0",
         "react": "^16.13.1",
         "react-apexcharts": "^1.3.7",
         "react-bootstrap": "^1.3.0",
@@ -27,6 +28,7 @@
         "react-split-button": "^1.0.1",
         "react-uuid": "^1.0.2",
         "reactstrap": "^8.6.0",
+        "use-sound": "^1.0.2",
         "uuid": "^8.3.0"
     },
     "scripts": {
