--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-modal-login": "^1.4.5",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
+        "react-signup-login-component": "^1.2.0",
         "react-split-button": "^1.0.1",
         "react-uuid": "^1.0.2",
         "reactstrap": "^8.6.0",
