--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test",
+        "test": "react-scripts test --env=jsdom-fourteen",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -62,6 +62,7 @@
     },
     "devDependencies": {
         "gh-pages": "^3.1.0",
+        "jest-environment-jsdom-fourteen": "^1.0.1",
         "prettier": "^2.1.2"
     }
 }
