--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
         "ag-grid-react": "^24.0.0",
         "apexcharts": "^3.21.0",
         "bootstrap": "^4.5.2",
+        "highcharts-react-official": "^3.0.0",
+        "html-react-parser": "^0.14.2",
         "jquery": "^3.5.1",
         "moment": "^2.29.1",
         "patch-package": "^6.2.2",
@@ -28,6 +30,7 @@
         "react-login-modal": "^1.2.1",
         "react-login-modal-sm": "^1.0.8",
         "react-modal-login": "^1.4.5",
+        "react-render-html": "^0.6.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-signup-login-component": "^1.2.0",
