--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-signup-login-component": "^1.2.0",
+        "react-spinners": "^0.10.6",
         "react-split-button": "^1.0.1",
         "react-uuid": "^1.0.2",
         "reactstrap": "^8.6.0",
