--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "ag-grid-react": "^24.0.0",
         "apexcharts": "^3.21.0",
         "bootstrap": "^4.5.2",
+        "hacktimer": "^1.1.3",
         "highcharts-react-official": "^3.0.0",
         "html-react-parser": "^0.14.2",
         "jquery": "^3.5.1",
@@ -45,9 +46,9 @@
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
-        "start": "react-scripts start",
-        "build": "react-scripts build",
-        "test": "react-scripts test --env=jsdom-fourteen",
+        "start": "react-app-rewired  start",
+        "build": "react-app-rewired  build",
+        "test": "react-app-rewired  test --env=jsdom-fourteen",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -68,6 +69,8 @@
     "devDependencies": {
         "gh-pages": "^3.1.0",
         "jest-environment-jsdom-fourteen": "^1.0.1",
-        "prettier": "^2.1.2"
+        "prettier": "^2.1.2",
+        "react-app-rewired": "^2.1.8",
+        "worker-loader": "^3.0.8"
     }
 }
