--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "private": true,
     "homepage": "https://myapp.herokuapp.com/",
     "dependencies": {
+        "@craco/craco": "^6.1.2",
         "@material-ui/core": "^4.11.0",
         "@material-ui/icons": "^4.9.1",
         "@progress/kendo-react-buttons": "^3.17.0",
@@ -15,6 +16,7 @@
         "ag-grid-react": "^24.0.0",
         "apexcharts": "^3.21.0",
         "bootstrap": "^4.5.2",
+        "craco-plugin-scoped-css": "^1.1.1",
         "hacktimer": "^1.1.3",
         "highcharts-react-official": "^3.0.0",
         "html-react-parser": "^0.14.2",
@@ -34,7 +36,8 @@
         "react-pro-sidebar": "^0.5.0",
         "react-render-html": "^0.6.0",
         "react-router-dom": "^5.2.0",
-        "react-scripts": "3.4.3",
+        "react-script-tag": "^1.1.2",
+        "react-scripts": "^4.0.3",
         "react-signup-login-component": "^1.2.0",
         "react-spinners": "^0.10.6",
         "react-split-button": "^1.0.1",
@@ -46,9 +49,9 @@
     "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
-        "start": "react-app-rewired  start",
-        "build": "react-app-rewired  build",
-        "test": "react-app-rewired  test --env=jsdom-fourteen",
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test --env=jsdom-fourteen",
         "eject": "react-scripts eject"
     },
     "eslintConfig": {
@@ -69,8 +72,11 @@
     "devDependencies": {
         "gh-pages": "^3.1.0",
         "jest-environment-jsdom-fourteen": "^1.0.1",
+        "node-sass": "^4.14.1",
         "prettier": "^2.1.2",
+        "react-app-rewire-css-modules": "github:codebandits/react-app-rewire-css-modules",
         "react-app-rewired": "^2.1.8",
+        "sass-loader": "^11.0.1",
         "worker-loader": "^3.0.8"
     }
 }
